eks-deploy-from-ecr-nodeport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-python-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: my-python-app
        image: 211223789150.dkr.ecr.us-east-2.amazonaws.com/my-python-repo
        imagePullPolicy: Always
# service type loadbalancer       
---
apiVersion: v1
kind: Service
metadata:
  name: python-app-svc
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
