eks-deploy-from-ecr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-python-app-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: my-python-app
        image: 211223789150.dkr.ecr.us-east-2.amazonaws.com/my-docker-repo
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
# service type loadbalancer       
---
apiVersion: v1
kind: Service
metadata:
  name: python-app-svc
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 80
  type: LoadBalancer
