k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-php-app
spec:
  selector:
    matchLabels:
      run: my-php-app
  replicas: 2
  template:
    metadata:
      labels:
        run: my-php-app
    spec:
      containers:
      - name: my-php-app
        image: ananthkannan/mypython-app-may20
        ports:
        - containerPort: 5000
apiVersion: v1
kind: Service
metadata:
  name: my-php-app
  labels:
    run: my-php-app
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: my-php-app
